CORE-000: Update header block theme with core theme.

--- a/docroot/modules/react/alshaya_hello_member/config/optional/block.block.hellomemberheaderblock.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/optional/block.block.hellomemberheaderblock.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - alshaya_hello_member
   theme:
-    - alshaya_hnm
+    - alshaya_white_label
 id: hellomemberheaderblock
-theme: alshaya_hnm
+theme: alshaya_white_label
 region: header
 weight: -30
 provider: null
