--- a/docroot/modules/brands/alshaya_we/modules/alshaya_we_transac/config/override/acq_sku.configurable_form_settings.yml
+++ b/docroot/modules/brands/alshaya_we/modules/alshaya_we_transac/config/override/acq_sku.configurable_form_settings.yml
@@ -3,8 +3,10 @@ attribute_weights:
     color: 1
     quantity_set: 2
     size: 3
+    frame: 13
 show_quantity: TRUE
 sortable_options:
   - color
   - quantity_set
   - size
+  - frame
