CORE-43927: PROD changes fixes.

--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/sa/sa.yml
@@ -5,3 +5,4 @@ variables:
   spc_basket_page: '/shop-home-fragrance/featured/white-barn-shop/'
   spc_pdp_page: '/buy-cactus-blossom-3-wick-candle-0.html/'
   spc_promotion_listing_page: '/shop-hand-soaps-sanitizers/hand-sanitizers/pocketbac-hand-sanitizers/'
+  spc_plp_add_to_cart: '/shop-home-fragrance/featured/white-barn-shop/'
