--- a/tests/behat/templates/variables/brands/bp/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/bp/env/prod/markets/sa/sa.yml
@@ -8,3 +8,4 @@ variables:
   spc_single_product_detail_page_coupon: '/buy-boots-tea-tree-witch-hazel-cleansing-toning-lotion-150ml.html/'
   spc_multiple_product_detail_page_coupon: '/buy-boots-tea-tree-witch-hazel-cleansing-toning-lotion-150ml.html/'
   spc_single_product_detail_page_no_coupon: '/buy-boots-tea-tree-witch-hazel-cleansing-toning-lotion-150ml.html/'
+  spc_plp_add_to_cart_single: '/shop-makeup-face-foundation/'
