--- a/tests/behat/templates/variables/brands/westelm/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/westelm/env/prod/markets/ae/ae.yml
@@ -4,3 +4,4 @@ variables:
   spc_product_listing_page: '/shop-holiday/holiday-decor/holiday-bedding-throws/'
   spc_basket_page: '/shop-holiday/holiday-decor/holiday-bedding-throws/'
   spc_pdp_page: 'buy-lush-velvet-mini-bias-boxstitch-quilt-shams.html'
+  spc_sofa_page: '/shop-furniture/living-room-furniture/sofas-sectionals/'
