--- a/tests/behat/templates/variables/brands/bbw/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/prod/markets/kw/kw.yml
@@ -3,4 +3,6 @@ variables:
   product_listing_page_url: '/shop-hand-soaps-sanitizers/featured/new-arrivals/'
   spc_product_listing_page: '/shop-hand-soaps-sanitizers/featured/new-arrivals/'
   spc_basket_page: '/shop-hand-soaps-sanitizers/featured/new-arrivals/'
-  spc_pdp_page: '/buy-passionfruit-banana-flower-gentle-foaming-hand-soap.html/'
+  spc_pdp_page: '/buy-thousand-wishes-glowing-body-scrub.html/'
+  spc_plp_add_to_cart: '/shop-candles/'
+  spc_plp_add_to_cart_single: '/shop-candles/all-candles/3-wick-candles/'
