--- a/tests/behat/templates/variables/brands/bp/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/bp/env/prod/markets/kw/kw.yml
@@ -3,8 +3,9 @@ variables:
   product_listing_page_url: '/shop-bestsellers-skincare/'
   spc_product_listing_page: '/shop-bestsellers-skincare/'
   spc_basket_page: '/shop-bestsellers-skincare/'
-  spc_pdp_page: 'buy-soap-glory-rushower-dry-shampoo-200ml.html'
-  spc_promotion_listing_page: '/buy-soap-glory-rushower-dry-shampoo-200ml.html/'
-  spc_single_product_detail_page_coupon: '/buy-soap-glory-rushower-dry-shampoo-200ml.html/'
-  spc_multiple_product_detail_page_coupon: '/buy-soap-glory-rushower-dry-shampoo-200ml.html/'
-  spc_single_product_detail_page_no_coupon: '/buy-soap-glory-rushower-dry-shampoo-200ml.html/'
+  spc_pdp_page: 'buy-vintage-cosmetic-company-shampoo-brush.html'
+  spc_promotion_listing_page: '/shop-offers-summer-essentials-buy-1-get-1-free/'
+  spc_single_product_detail_page_coupon: '/buy-inecto-naturals-moisturising-coconut-hair-mask.html/'
+  spc_multiple_product_detail_page_coupon: '/buy-inecto-naturals-moisturising-coconut-hair-mask.html/'
+  spc_single_product_detail_page_no_coupon: '/buy-inecto-naturals-moisturising-coconut-hair-mask.html/'
+  spc_plp_add_to_cart_single: '/shop-personal-care-bath-body/'
