--- a/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/hm/env/prod/markets/sa/sa.yml
@@ -3,4 +3,4 @@ variables:
   product_listing_page_url: "/shop-women/new-arrivals/shoes-accessories/"
   spc_product_listing_page: '/shop-women/new-arrivals/shoes-accessories/'
   spc_basket_page: '/shop-beauty/shop-product/eyes/'
-  spc_pdp_page: 'buy-zip-front-boots-black.html'
+  spc_pdp_page: '/buy-short-sequined-dress-black-silver-coloured.html/'
