--- a/tests/behat/templates/variables/brands/muji/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/muji/env/prod/markets/kw/kw.yml
@@ -1,9 +1,9 @@
 variables:
-  spc_product_listing_page: '/shop-new/'
-  spc_basket_page: '/shop-new/'
+  spc_product_listing_page: '/shop-health-beauty/'
+  spc_basket_page: '/shop-health-beauty/'
   spc_pdp_page: '/buy-french-linen-washed-stand-collar-shirt-natural.html/'
-  product_listing_page_url: "/shop-new/"
-  spc_plp_add_to_cart_single: '/shop-new/'
+  product_listing_page_url: "/shop-health-beauty/"
+  spc_plp_add_to_cart_single: '/shop-health-beauty/'
   spc_promotion_listing_page: '//'
   spc_single_product_detail_page_coupon: '/buy-french-linen-washed-stand-collar-shirt-natural.html/'
   spc_bank_product: '/shop-new/'
