--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
@@ -1,5 +1,5 @@
 variables:
-  spc_product_listing_page: '/shop-bedding/'
-  spc_basket_page: '/shop-bedding/'
-  spc_pdp_page: '/buy-jacquard-linen-medallion-duvet-cover-sham-soft-rose.html/'
-  product_listing_page_url: "/shop-bedding/"
+  spc_product_listing_page: '/shop-furniture/home-office/bookcases-shelves/'
+  spc_basket_page: '/shop-furniture/home-office/bookcases-shelves/'
+  spc_pdp_page: '/buy-north-reclaimed-wood-platform-bed.html/'
+  product_listing_page_url: "/shop-furniture/home-office/bookcases-shelves/"
