--- a/tests/behat/templates/variables/brands/westelm/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/westelm/env/prod/markets/sa/sa.yml
@@ -1,7 +1,8 @@
 variables:
   url_product_page: 'buy-pierced-porcelain-hurricanes-vases-constellation.html'
-  product_listing_page_url: '/shop-holiday/holiday-decor/decor-cushions/'
-  spc_product_listing_page: '/shop-holiday/holiday-decor/decor-cushions/'
-  spc_basket_page: '/shop-holiday/holiday-decor/decor-cushions/'
+  product_listing_page_url: '/shop-furniture/living-room-furniture/chairs/'
+  spc_product_listing_page: '/shop-furniture/living-room-furniture/chairs/'
+  spc_basket_page: '/shop-furniture/living-room-furniture/chairs/'
   spc_pdp_page: 'buy-pierced-porcelain-hurricanes-vases-constellation.html'
   spc_bank_product: 'buy-pierced-porcelain-hurricanes-vases-constellation.html'
+  spc_sofa_page: '/shop-furniture/living-room-furniture/sofas-sectionals/'
