CORE-43971: Added indexing for style code attribute.

--- a/docroot/modules/custom/alshaya_color_split/config/override/alshaya_acm_product.sku_base_fields.yml
+++ b/docroot/modules/custom/alshaya_color_split/config/override/alshaya_acm_product.sku_base_fields.yml
@@ -2,6 +2,7 @@ fields:
   style_code:
     label: 'Style Code'
     type: 'string'
+    index: 1
   grouping_attributes:
     label: 'Grouping Attribute'
     type: 'string'
