CORE-44102: Fix the color label for HM and COS. Reduced code.

--- a/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
+++ b/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
@@ -38,3 +38,9 @@ product_overlay:
     - core/jquery
     - rcs_placeholders/helpers
     - alshaya_acm_cart_notification/cart_notification_js
+
+swatch:
+  js:
+    js/alshaya_assets_swatch.js: {}
+  dependencies:
+    - alshaya_pims_assets/swatch
